environments/dev/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: automation
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: reading
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: rss
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: bookmarks
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: databases
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: cache
  labels:
    istio-injection: enabled
